@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2003, 2018 IBM Corporation and others.
+ * Copyright (c) 2003, 2020 IBM Corporation and others.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -457,9 +457,9 @@ public class StateBuilder {
 
 		String trimmed = value.trim();
 		if (ATTR_TYPE_DOUBLE.equalsIgnoreCase(type))
-			return new Double(trimmed);
+			return Double.valueOf(trimmed);
 		else if (ATTR_TYPE_LONG.equalsIgnoreCase(type))
-			return new Long(trimmed);
+			return Long.valueOf(trimmed);
 		else if (ATTR_TYPE_URI.equalsIgnoreCase(type))
 			try {
 				Class<?> uriClazz = Class.forName("java.net.URI"); //$NON-NLS-1$
@@ -743,7 +743,7 @@ public class StateBuilder {
 				Map<String, Object> mapAttrs = getAttributes(element, new String[0]);
 				if (profileIndex != null)
 					mapAttrs.put(ExportPackageDescriptionImpl.EQUINOX_EE, profileIndex);
-				Dictionary<String, Object> attrs = mapAttrs == null ? new Hashtable<String, Object>() : new Hashtable<>(mapAttrs);
+				Dictionary<String, Object> attrs = mapAttrs == null ? new Hashtable<>() : new Hashtable<>(mapAttrs);
 				desc.setAttributes(attrs);
 				Map<String, String> directives = new HashMap<>();
 				Enumeration<String> keys = element.getDirectiveKeys();
@@ -776,7 +776,7 @@ public class StateBuilder {
 						throw new BundleException("A bundle is not allowed to define a capability in the " + IdentityNamespace.IDENTITY_NAMESPACE + " name space."); //$NON-NLS-1$ //$NON-NLS-2$
 				}
 				Map<String, Object> mapAttrs = getAttributes(equinoxCapability, new String[] {Constants.VERSION_ATTRIBUTE});
-				Dictionary<String, Object> attrs = mapAttrs == null ? new Hashtable<String, Object>() : new Hashtable<>(mapAttrs);
+				Dictionary<String, Object> attrs = mapAttrs == null ? new Hashtable<>() : new Hashtable<>(mapAttrs);
 				attrs.put(desc.getType(), name);
 				String versionString = equinoxCapability.getAttribute(Constants.VERSION_ATTRIBUTE);
 				if (versionString != null)
